--- a/index.html
+++ b/index.html
@@ -6,29 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ღ My First Site ღ</title>
   </head>
+
+  <style>
+   hr {border-style: dotted; color: #872de1; width: 25%; border-width: 0; border-top-width: 30px;
+    }
+    body {text-align: center; font-family: monospace; font-size: 20px;}
+    table{font-size: 20px;}
+  </style>
+
   <body
-    background="background1.png"
+    background="background.png"
     style="
       background-repeat: no-repeat;
       background-attachment: fixed;
-      background-size: cover;
-      height: 800px;
-      width: 950px;
-    "
-  >
-    <table cellspacing="20px">
+      background-size: cover;">
+
+<h4 style="position: fixed;
+bottom: 0;
+right: 40;">
+  <a href="./Contact_Information.html" target="_blank"
+    ><img
+      src="contact.png"
+      alt="Contact Me"
+      style="height: 50px"
+      width="50px"
+  /></a>
+</h4>
+
+    <table cellspacing="20px"  align="center">
       <tr>
-        <td>
+        <td>  
           <img
             src="Prachi profile picture - Copy.png"
             alt="Prachi profile picture"
-            style="height: 230px; width: 230px; border-radius: 115px"
+            style="height: 230px; width: 230px; border-radius: 115px;"
           />
         </td>
 
         <td>
-          <h1 style="margin-bottom: 0%">Prachi Sharma</h1>
-          <h3 style="margin: 0%">
+          <h1 style="margin-bottom: 0%; font-size: 60px;">Prachi Sharma</h1>
+          <h3 style="margin: 0%; font-size: 30px;" >
             <em
               >Artist and CEO of
               <strong
@@ -40,32 +57,23 @@
               ></em
             >
           </h3>
-          <h4>
-            <a href="./Contact_Information.html" target="_blank"
-              ><img
-                src="contact_me.jpg"
-                alt="Contact Me"
-                style="height: 50px"
-                width="175px"
-            /></a>
-          </h4>
         </td>
       </tr>
     </table>
 
     <br />
-    <hr style="height: 4px; background-color: black" />
-    <h2>My Interests</h2>
-    <ol>
+    <hr>
+    <h2 style="font-size: 30px;">My Interests</h2>
+    <ul style="list-style-position: inside;">
       <li>Arts</li>
       <li>Travelling</li>
       <li>Trekking</li>
       <li>Fitness</li>
       <li>Exploring Cafes'</li>
       <li>Dance & Music</li>
-    </ol>
-    <h2><a href="Artwork_we_Create.html" target="_blank">My Artwork</a></h2>
-    <ol>
+    </ul>
+    <h2 style="font-size: 30px;"><a href="Artwork_we_Create.html" target="_blank">My Artwork</a></h2>
+    <ul style="list-style-position: inside;">
       <li>
         <a href="IMG_20210401_212957_782.jpg" target="_blank"
           >Acrylic Paintings</a
@@ -82,9 +90,9 @@
       <li>Crafts</li>
       <li>Gift Items</li>
       <li>Creative Packaging</li>
-    </ol>
-    <h2>Art Ratings</h2>
-    <table>
+    </ul>
+    <h2 style="font-size: 30px;">Art Ratings</h2>
+    <table  align="center">
       <tr>
         <td>Acrylic Paintings</td>
         <td>⭐⭐⭐⭐⭐</td>
@@ -99,11 +107,11 @@
       </tr>
     </table>
 
-    <hr style="height: 4px; background-color: black">
+    <hr>
     <br>
 
-    <h2>My Academic Journey</h2>
-    <table cellspacing="12px">
+    <h2 style="font-size: 30px;">My Academic Journey</h2>
+    <table cellspacing="12px"  align="center">
       <tr>
         <th>Education</th>
         <th>Year</th>
